
Name:                FSMlib
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              MigOrec
Maintainer:          MigOrec@gmail.com         
Category:            Development
Build-type:          Simple
Extra-source-files:  examples\simple_example\FSM_a.hs,
					 examples\simple_example\Main.hs
Cabal-version:       >=1.2

Library
 Exposed-modules: 	RSOI.FSMlib
 Extensions: 		MultiParamTypeClasses, FunctionalDependencies    
 Build-depends:  	base, containers, HDBC     
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:    

Executable fsm2dot
 Main-is:			RSOI/FSM2dot.hs
 Build-Depends:     base, haskell-src-exts, graphviz, text, easy-file
  